build: target JDK 17